<resources>
    <string name="app_name">My Portfolio App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">My Nannodegree Apps! </string>
    <string name="main_spotify">SPOTIFY SREAMER</string>
    <string name="main_scrores"> SCORES APP </string>
    <string name="main_library">  LIBRARY APP </string>
    <string name="main_bigger"> BUILD IT BIGGER </string>
    <string name="main_reader"> XYZ READER </string>
    <string name="main_myown"> CAPSTONE : MY OWN APP </string>

</resources>
