<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#DDEAF0"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PortfolioActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"

       />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/main_spotify"
        android:id="@+id/btn_spotify"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="#F08C35"
       android:textStyle="bold"
        android:onClick="showSpotify"


         />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/main_scrores"
        android:id="@+id/btn_streamer"
        android:layout_below="@+id/btn_spotify"
       android:layout_centerHorizontal="true"
        android:background="#F08C35"
        android:textStyle="bold"
        android:onClick="showScores"



        />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/main_library"
        android:id="@+id/btn_library"
        android:layout_below="@+id/btn_streamer"
        android:layout_centerHorizontal="true"
        android:background="#F08C35"
        android:textStyle="bold"
        android:onClick="showLibrary"



        />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/main_bigger"
        android:id="@+id/btn_bigger"
        android:layout_below="@+id/btn_library"
        android:layout_centerHorizontal="true"
        android:background="#F08C35"
        android:textStyle="bold"
        android:onClick="showBigger"



        />
    <Button
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/main_reader"
        android:id="@+id/btn_reader"
        android:layout_below="@+id/btn_bigger"
        android:layout_centerHorizontal="true"
        android:background="#F08C35"
        android:textStyle="bold"
        android:onClick="showReader"




        />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/main_myown"
        android:id="@+id/btn_myown"
        android:layout_below="@+id/btn_reader"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:onClick="showMyOwn"




        />


</RelativeLayout>
